# cnf-mutable-tests

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  ExampleDataStruct.hs  GenericExample.hs  Main.hs  Makefile  README.md  SafeInterface.hs  cnf-mutable-tests.cabal  cnf-mutable.cabal  setup_env.sh  stack-7.10.3.yaml  stack-7.11.cnf.yaml  stack-cnf.yaml  stack.yaml
Data/: CNFRef.hs  CNFRef2.hs
Data/CNFRef/: DeepStrict.hs  Internal.hs  Simple.hs
bench/: Bench.hs  BenchCList.hs  BenchChanBox.hs  Utils.hs
misc/: ChanBox.hs  ExampleManualGCWithCompact.hs  SafeInterface.hs
old/src/Data/: CNFRef.hs
old/src/Data/CNFRef/: Simple.hs
src/Control/Monad/: Utils.hs
src/Data/: CList.hs  CNFRef.hs  ChanBox.hs  IntBox.hs  IntBox2.hs
src/Data/CList/: MList.hs  NoFree.hs
src/Data/CNFRef/: DeepStrict.hs  Internal.hs  Simple.hs
src/Data/ChanBox/: V0.hs  V1.hs  V2.hs
tests/: Tests.hs
