name:                cnf-mutable-tests
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          git@vikraman.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cnf-mutable-tests
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , deepseq >=1.4 && <1.5
                     , compact >= 1.0 && <1.1
  -- hs-source-dirs:
  default-language:    Haskell2010
