name:                cnf-mutable-tests
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          git@vikraman.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cnf-mutable-tests
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , deepseq >=1.4 && <1.5
                     , compact >= 1.0 
                     , vector >= 0.11 && <0.12
                     , primitive >=0.6.1 && <0.7
                     , ghc-prim >=0.4.0.0 && <0.5.0.0
  -- hs-source-dirs:
  default-language:    Haskell2010

library
  exposed-modules:     Data.CNFRef
                     , Data.CNFRef2
                     , Data.CNFRef.Simple
                     , ExampleDataStruct
  build-depends:       base >=4.8 && <4.9
                     , deepseq >=1.4 && <1.5
                     , compact >=1.0 
                     , compact-indexed
                     , atomic-primops >=0.8.0.2 && <0.9.0.0
  default-language:    Haskell2010
