name:                cnf-mutable
version:             0.1.0.0
-- synopsis:
description:         Mutable objects in CNF
-- license:
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          git@vikraman.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.CNFRef
                     , Data.CNFRef.DeepStrict
                     , Data.IntBox
                     -- , Data.CList
                     -- , Data.CList.MList
                     -- , Data.CList.NoFree
  -- other-modules:     -- Data.CNFRef.Internal
  build-depends:       atomic-primops >=0.8.0.2
                     , base >=4.8
                     , compact >=1.0
                     , compact-indexed
                     , deepseq >=1.4
                     , ghc-prim >=0.4.0.0
                     , mtl >= 2.2.1
                     , primitive >=0.6.1
                     , vector >=0.11
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -fobject-code -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  -- other-modules:
  build-depends:       base >=4.8
                     , deepseq >=1.4
                     , compact >=1.0
                     , compact-indexed
                     , vector >=0.11
                     , primitive >=0.6.1
                     , ghc-prim >=0.4.0.0
                     , cnf-mutable
                     , tasty >=0.11
                     , tasty-hunit >=0.9
  hs-source-dirs:      tests
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  other-modules:       Utils
  build-depends:       base >=4.8
                     , deepseq >=1.4
                     , cmdargs >=0.10.14
                     , criterion >=1.1.1.0
                     , cnf-mutable
                     , pcg-random >=0.1.3.2
                     , vector >=0.11
  hs-source-dirs:      bench
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
