name:                cnf-mutable
version:             0.1.0.0
-- synopsis:
description:         Mutable objects in CNF
-- license:
license-file:        LICENSE
author:              Vikraman Choudhury
maintainer:          git@vikraman.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Utils
                     , Data.CNFRef
                     , Data.CNFRef.DeepStrict
                     , Data.IntBox
                     , Data.CList
                     , Data.CList.MList
                     , Data.CList.NoFree
                     , Data.ChanBox.V0
                     , Data.ChanBox.V1
                     , Data.ChanBox.V2
  other-modules:       Data.CNFRef.Internal
  build-depends:       async >= 2.1.0
                     , atomic-primops >=0.8.0.2
                     , base >=4.8
                     , compact >=1.0
                     , compact-indexed
                     , containers >= 0.5.7.1
                     , deepseq >=1.4
                     , ghc-prim >=0.4.0.0
                     , mtl >= 2.2.1
                     , primitive >=0.6.1
                     , vector >=0.11
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -fobject-code
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  -- other-modules:
  build-depends:       base >=4.8
                     , deepseq >=1.4
                     , compact >=1.0
                     , compact-indexed
                     , vector >=0.11
                     , primitive >=0.6.1
                     , ghc-prim >=0.4.0.0
                     , cnf-mutable
                     , tasty >=0.11
                     , tasty-hunit >=0.9
  hs-source-dirs:      tests
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench-clist
  type:                exitcode-stdio-1.0
  main-is:             BenchCList.hs
  build-depends:       base >=4.8
                     , cmdargs >=0.10.14
                     , cnf-mutable
                     , criterion >=1.1.1.0
                     , deepseq >=1.4
                     , pcg-random >=0.1.3.2
                     , vector >=0.11
  hs-source-dirs:      bench
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench-chanbox
  type:                exitcode-stdio-1.0
  main-is:             BenchChanBox.hs
  build-depends:       base >=4.8
                     , cnf-mutable
                     , criterion >=1.1.1.0
                     , deepseq >=1.4
                     , hostname >=1.0
                     , pcg-random >=0.1.3.2
                     , time >= 1.6
                     , vector >=0.11
  hs-source-dirs:      bench
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
